kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cardfillingbot
  labels:
    app: cardfillingbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cardfillingbot
  template:
    metadata:
      labels:
        app: cardfillingbot
    spec:
      containers:
      - name: cardfillingbot
        image: nkuznetsov44/cardfillingbot:x86prod
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cardfillingbot-redis
  labels:
    app: cardfillingbot-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cardfillingbot-redis
  template:
    metadata:
      labels:
        app: cardfillingbot-redis
    spec:
      containers:
      - name: cardfillingbot-redis
        image: redis
        command:
          - redis-server
          - "/usr/local/etc/redis.conf"
        ports:
          - containerPort: 6379
        volumeMounts:
          - mountPath: /usr/local/etc
            name: config
      volumes:
        - name: config
          configMap:
            name: cardfillingbot-config
            items:
              - key: redis-config
                path: redis.conf
