kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cardfillingbot
spec:
  selector:
    app: cardfillingbot
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: cardfillingbot-redis
spec:
  selector:
    app: cardfillingbot-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
